# Create-MCP-server

./: LICENSE  README.md  pyproject.toml
create_mcp_server/: __init__.py  __main__.py  cli.py  generator.py
create_mcp_server/templates/: .gitignore.j2  README.md.j2  __main__.py.j2  pyproject.toml.j2  server.py.j2
