[project]
name = "create-mcp-server"
version = "0.1.0"
description = "A CLI tool to scaffold MCP server projects with fastmcp"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Create-MCP-server Contributors" }
]
dependencies = [
    "click>=8.1.7",
    "jinja2>=3.1.2",
]

[project.scripts]
create-mcp-server = "create_mcp_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
